<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <ProgressBar
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:maxLines="2"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/ad_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_gravity="end"
            android:text="@string/ad"
            android:textSize="8sp"
            android:background="@drawable/bg_price"
            android:padding="3.5dp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/install_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="60dp"
            android:minHeight="36dp"
            android:layout_marginVertical="2.5dp"
            android:paddingHorizontal="2.5dp"
            android:paddingVertical="2.5dp"
            android:text="@string/install"
            android:textAllCaps="true"
            android:gravity="center"
            android:background="@drawable/bg_round_primary"
            android:textColor="@color/white"
            android:textSize="11sp"/>

    </LinearLayout>

</LinearLayout>